Created a text input component.

--- a/client/rsvp/rsvp.less
+++ b/client/rsvp/rsvp.less
@@ -37,8 +37,8 @@ html {
 		min-width: 200px;
 	}
 	textarea {
-		display: block;
-		margin: 10px auto 0px;
+		min-width: 300px;
+		height: 200px;
 	}
 	button {
 		margin-top: 20px;
