More progress on the form.

--- a/client/rsvp/form/form.less
+++ b/client/rsvp/form/form.less
@@ -1,5 +1,31 @@
 
 .form {
-	.message {
+	h4 {
+		font-weight: 300;
+		color: @grey4;
+		font-size: 14px;
+	}
+
+	table {
+		text-align: left;
+		width: 100%;
+		thead {
+			tr {
+				display: table-cell;
+			}
+		}
+		tbody {
+			tr {
+				td {
+					input[type="text"] {
+						box-sizing: border-box;
+						width: 100%;
+					}
+					input[type="checkbox"] {
+						font-size: 64px;
+					}
+				}
+			}
+		}
 	}
 }
