--- a/client/rsvp/form/form.less
+++ b/client/rsvp/form/form.less
@@ -28,4 +28,17 @@
 			}
 		}
 	}
+
+	.error {
+		margin-top: 20px;
+
+		.content {
+			display: inline-block;
+			padding: 20px;
+			margin: 0px auto;
+			background-color: lightcoral;
+			border: 1px solid crimson;
+			border-radius: 3px;
+		}
+	}
 }
