--- a/client/rsvp/rsvp.less
+++ b/client/rsvp/rsvp.less
@@ -56,6 +56,19 @@ html {
 			margin-top: 50px;
 		}
 	}
+
+	.error {
+		margin-top: 20px;
+
+		.content {
+			display: inline-block;
+			padding: 20px;
+			margin: 0px auto;
+			background-color: lightcoral;
+			border: 1px solid crimson;
+			border-radius: 3px;
+		}
+	}
 }
 
 @mobile: ~"only screen and (max-width : 797px)";
