Improving spacing and adding save button busy rendering.

--- a/client/rsvp/rsvp.less
+++ b/client/rsvp/rsvp.less
@@ -11,6 +11,15 @@ html {
 	body {
 		margin: 0px;
 	}
+	h1 {
+		font-size: 32px;
+	}
+	h2 {
+		font-size: 28px;
+	}
+	h3 {
+		margin-top: 40px;
+	}
 }
 .rsvp {
 	max-width: 800px;
@@ -49,6 +58,9 @@ html {
 		background-color: @grey0;
 		padding: 10px 20px;
 		cursor: pointer;
+		&:hover {
+			background-color: @grey1;
+		}
 	}
 
 	section {
