--- a/client/rsvp/rsvp.less
+++ b/client/rsvp/rsvp.less
@@ -48,7 +48,7 @@ html {
 	}
 	textarea {
 		min-width: 300px;
-		height: 200px;
+		height: 100px;
 	}
 	button {
 		margin-top: 20px;
@@ -78,6 +78,16 @@ html {
 			margin: 0px auto;
 			background-color: lightcoral;
 			border: 1px solid crimson;
+			border-radius: 3px;
+		}
+	}
+
+	.result {
+		.content {
+			display: inline-block;
+			padding: 20px 40px;;
+			margin: 0px auto;
+			background-color: skyblue;
 			border-radius: 3px;
 		}
 	}
